[workspace]
members = [
  "kerbeiros",
  "kerberos_ccache",
  "kerberos_asn1",
  "kerberos_crypto",
  "kerberos_constants",
  "kerberos_keytab",
]

[workspace.package]
version = "0.4.2"
authors = ["Eloy Perez  <zer1t0ps@protonmail.com>", "David Mulder <dmulder@samba.org>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/himmelblau-idm/kerbeiros"

[workspace.dependencies]
himmelblau_kerberos_asn1 = { version = "0.4.0", path = "./kerberos_asn1" }
himmelblau_kerberos_ccache = { version = "0.4.0", path = "./kerberos_ccache" }
himmelblau_kerberos_crypto = { version = "0.4.0", path = "./kerberos_crypto" }
himmelblau_kerberos_constants = { version = "0.4.0", path = "./kerberos_constants" }
