[package]
name = "himmelblau_kerbeiros"
description = "Kerberos client library"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
himmelblau_kerberos_asn1 = { workspace = true }
himmelblau_kerberos_ccache = { workspace = true }
himmelblau_kerberos_crypto = { workspace = true }
himmelblau_kerberos_constants = { workspace = true }

ascii = "1.1.0"
chrono = "0.4"
failure = "0.1.5"
failure_derive = "0.1.5"
rand = "0.8.5"
dns-lookup = "2.0"
getset = "0.1"

[lints.clippy]
needless_return = "allow"
