[package]
name = "himmelblau_kerbeiros"
description = "Kerberos client library"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
himmelblau_kerberos_asn1 = { workspace = true }
himmelblau_kerberos_ccache = { workspace = true }
himmelblau_kerberos_crypto = { workspace = true }
himmelblau_kerberos_constants = { workspace = true }

ascii = "1.1.0"
chrono = "0.4"
rand = "0.9.0"
dns-lookup = "2.0"
getset = "0.1"
thiserror = "2.0.9"

[lints.clippy]
needless_return = "allow"
