[package]
name = "kerberos_asn1"
description = "Library to Kerberos ASN1 structures"
version = "0.0.3"
authors = ["Eloy Perez  <zer1t0ps@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/Zer1t0/kerbeiros/kerberos_asn1"


[dependencies]
red_asn1 = "0.1"
ascii = "0.9.1"
chrono = "0.4"




