[package]
name = "kerberos_asn1"
description = "Parse/Build Kerberos ASN1 DER To/From Rust structs"
version = "0.0.7"
authors = ["Eloy <zer1t0ps@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/Zer1t0/kerbeiros"

[dependencies]
kerberos_constants = { version = "0.0", path = "../kerberos_constants"}

red_asn1 = "0.3"
red_asn1_derive = "0.2"
chrono = "0.4"

