[package]
name = "himmelblau_kerberos_asn1"
description = "Parse/Build Kerberos ASN1 DER To/From Rust structs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
himmelblau_kerberos_constants = { workspace = true }

himmelblau_red_asn1 = "0.3"
himmelblau_red_asn1_derive = "0.2"
chrono = "0.4"

[lints.clippy]
needless_return = "allow"
