[package]
name = "kerberos_ccache"
description = "Library to parse ccache kerberos structures"
version = "0.0.2"
authors = ["Eloy Perez <zer1t0ps@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/Zer1t0/kerbeiros/kerberos_ccache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kerberos_constants = { version = "0.0", path = "../kerberos_constants"}

nom = "5"

[dev-dependencies]
chrono = "0.4"
