[package]
name = "himmelblau_kerberos_ccache"
description = "Library to parse ccache kerberos structures"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
himmelblau_kerberos_constants = { workspace = true }
himmelblau_kerberos_asn1 = { workspace = true }

failure_derive = "0.1"

nom = "8"
chrono = "0.4"
thiserror = "2.0.9"

[lints.clippy]
needless_return = "allow"
