[package]
name = "himmelblau_kerberos_constants"
description = "Constants used by different objects and actors of the Kerberos protocol"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints.clippy]
needless_return = "allow"
