[package]
name = "kerberos_crypto"
description = "Cryptography algorithms for Kerberos"
version = "0.3.6"
authors = ["Eloy Perez  <zer1t0ps@protonmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/Zer1t0/kerbeiros"


[dependencies]
kerberos_constants = { version = "0.0", path = "../kerberos_constants"}

chrono = "0.4"
rand = "0.8.5"
md4 = "0.10"
num = "0.4"
failure = "0.1"
pbkdf2 = "0.12.2"
md-5 = "0.10.6"
hmac = "0.12.1"
sha-1 = "0.10.1"
aes = "0.8.4"
digest = "0.10.7"
rc4 = "0.1.0"
ecb = { version = "0.1.2", features = ["alloc"] }
cbc = { version = "0.1.2", features = ["alloc"] }

[lints.clippy]
needless_return = "allow"
