[package]
name = "himmelblau_kerberos_crypto"
description = "Cryptography algorithms for Kerberos"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
himmelblau_kerberos_constants = { workspace = true }

chrono = "0.4"
rand = "0.9.0"
md4 = "0.10"
num = "0.4"
pbkdf2 = "0.12.2"
md-5 = "0.10.6"
hmac = "0.12.1"
sha-1 = "0.10.1"
aes = "0.8.4"
digest = "0.10.7"
rc4 = "0.1.0"
ecb = { version = "0.1.2", features = ["alloc"] }
cbc = { version = "0.1.2", features = ["alloc"] }
thiserror = "2.0.9"

[lints.clippy]
needless_return = "allow"
