[package]
name = "himmelblau_kerberos_keytab"
description = "Library to parse keytab kerberos files"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nom = "8"

[dev-dependencies]
himmelblau_kerberos_constants = { workspace = true }

[lints.clippy]
needless_return = "allow"
